2005-09-01	Benedikt Meurer <benny@xfce.org>

	* xfce4-tips/main.c: Do not include <libxfce4util/i18n.h> directly.

2005-07-20	Benedikt Meurer <benny@xfce.org>

	* engines/balou/config.c, engines/mice/mice.c, engines/simple/simple.c,
	  xfce4-session/xfsm-chooser.c: Mark more user visible strings for
	  translation, using the patch provided by Daichi Kawahata
	  <daichik@users.sourceforge.net>.
	* xfce4-session.rc, engines/balou/themes/Default/themerc: Add japanese
	  translations, thanks to Daichi Kawahata
	  <daichik@users.sourceforge.net>.

2005-07-16	Jean-Francois Wauthy

	* po/eo.po: Update esperanto translations, thanks to Sylvain
	  Vedrenne <sylvain.vedrenne@free.fr>.

2005-07-15	Benedikt Meurer <benny@xfce.org>

	* xfce4-tips/, NEWS: Import the xfce4-tips from the xfce4-toys and
	  modify it to support the new autostart mechanism.
	* po/POTFILES.in: Add new translateable files here.
	* po/*.po, po/xfce4-session.pot: Merge translations.
	* configure.in.in, Makefile.am: Add the xfce4-tips to the build
	  framework.
	* xfce4-session.spec.in: Include the default autostart directory as
	  well.

2005-07-15	Benedikt Meurer <benny@xfce.org>

	* xfce4-autostart-editor/, NEWS: Add a simple editor for the autostart
	  mechanism. Currently supports only the basics. The idea is to turn
	  this into a full-featured "session editor" once xfce4-session
	  understands D-BUS.
	* configure.in.in, Makefile.am: Add the autostart editor to the build
	  framework.
	* po/POTFILES.in: Add new translateable files here.
	* po/*.po, po/xfce4-session.pot: Merge translations.

2005-07-14	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/xfsm-startup.c: Implement Waldos second draft of the
	  autostart specification. Autostart items from the old location will
	  automatically be migrated to the new standard location on first run
	  of the new session manager. This fixes bug #1045.
	* docs/C/xfce4-session.{html,xml}: Describe the new autostart location.