@@ -1,3 +1,8 @@
+2005-11-30	Benedikt Meurer <benny@xfce.org>
+
+	* settings/session/session.c, settings/splash/splash.c: Fix naming
+	  inconsistency for kiosk mode settings. This fixes bug #1246.
+
 2005-09-01	Benedikt Meurer <benny@xfce.org>
 
 	* xfce4-tips/main.c: Do not include <libxfce4util/i18n.h> directly.
